@@ -222,6 +222,9 @@ Release 2.6.0 - UNRELEASED
     MAPREDUCE-5873. Shuffle bandwidth computation includes time spent waiting
     for maps (Siqi Li via jlowe)
 
+    MAPREDUCE-5542. Killing a job just as it finishes can generate an NPE in
+    client (Rohith via jlowe)
+
 Release 2.5.1 - 2014-09-05
 
   INCOMPATIBLE CHANGES
